Fixed sending large amount (lowering default mixin)

--- a/app/backendWindow/app.html
+++ b/app/backendWindow/app.html
@@ -2,6 +2,7 @@
 <html>
   <!--
     -- Copyright (C) 2019 ExtraHash
+    -- Copyright (C) 2020 Deeterd
     --
     -- Please see the included LICENSE file for more information.
     -->
