--- a/app/mainWindow/app.html
+++ b/app/mainWindow/app.html
@@ -2,10 +2,12 @@
 <html>
   <!--
     -- Copyright (C) 2019 ExtraHash
+    -- Copyright (C) 2020 Deeterd
     --
     -- Please see the included LICENSE file for more information.
     -->
   <head>
+    <title>CirqWallet</title>
     <meta charset="utf-8" />
     <script>
       (function() {
